Fix header by taking it out of the container

--- a/src/style.css
+++ b/src/style.css
@@ -106,24 +106,22 @@
     padding-bottom: 0.5rem;
 }
 
-
-.sp-container .sp-header {
+.sp-header {
     padding: 0.25rem 0;
-    margin-bottom: 1rem;
     color: #474746;
     background-color: #eeedec;
     border-bottom: 1px solid #bdbdbc;
     text-align: center;
 }
 
-.sp-container .sp-header .sp-info {
+.sp-header .sp-info {
     padding-top: 0.5rem;
     display: inline-grid;
     grid-template-columns: 0fr 1fr;
     grid-gap: 0 10px;
 }
 
-.sp-container .sp-header .sp-info .sp-header-title {
+.sp-header .sp-info .sp-header-title {
     font-weight: bold;
     display: flex;
     place-content: center;
@@ -131,7 +129,7 @@
     text-shadow: var(--shadow);
 }
 
-.sp-container .sp-header .sp-info .sp-icon {
+.sp-header .sp-info .sp-icon {
     background: #86929a url(shortcut.svg) center / 30px no-repeat;
     width: 50px;
     height: 50px;
